--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <a href="on_event.html">On Event</a>
       <a href="basemap_gallery.html">Basemap Gallery</a>
       <a href="query_task.html">Query Task</a>
+      <a href="lab7_homework.html">2017 State Education</a>
       </div>
     </div>
 
